update bg colors

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
       font-family: sans-serif;
     }
     body {
-      background: linear-gradient(#DFE8F0, #003C8F);
+      background: linear-gradient(#FFFFFF, #40B9EA, #034476);
       display: flex;
       justify-content: center;
       align-items: center;
