--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
     <div class="message" id="status">
       Загрузка…
       <noscript>
-        <br>Если загрузка не началась — <a href="https://www.konsalt.by/">перейдите на новый сайт</a>.
+        <br>Сайт переехал. <a href="https://www.konsalt.by/">Перейти на новый сайт</a>.
       </noscript>
     </div>
   </div>
@@ -66,7 +66,6 @@
       .then(data => {
         if (data.redirect) {
           window.location.href = data.redirect;
-          //document.getElementById('status').innerHTML = data.redirect;
         } else {
           document.getElementById('status').innerHTML =
             `Сайт переехал. <a href="${fallbackUrl}">Перейти на новый сайт</a>.`;
